core/tests/integration/fail/records/dynamic_field_missing.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::Other'
{ "%{(if false then "foo" else "bar")}" = false, bar = true }.foo